// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DeploymentInfraWrapperWithRef initial render 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main infraWidgetWrapper"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="infraVariablesTitleDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              common.variables
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <span
                class="StyledProps--font StyledProps--main labelText ng-tooltip-native StyledProps--inline"
                data-tooltip-id="infraVariablesDT"
              >
                pipeline.customDeployment.infraVariablesTitle
              </span>
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="customVariablesStage infraVariableSection"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addVariable Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      variables.newVariable
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="fetchInstancesScriptTitleDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.fetchInstancesScript
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--margin-top-medium StyledProps--margin-bottom-medium"
              />
              <div
                class="bp3-popover-wrapper templateDropdown Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="fetchInstancesScript.store.type"
                      placeholder="- Select -"
                      style="padding-right: 0px;"
                      type="text"
                      value=""
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="instanceObjectArrayPathDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.instanceObjectArrayPath
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="Layout--vertical StyledProps--main"
              style="width: 50%;"
            >
              <div
                class="bp3-form-group halfWidth"
                data-id="instancesListPath-0"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="instancesListPath"
                        placeholder="cd.specifyTargetHost"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle instanceAttributes StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="instanceAttributesDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.instanceAttributes
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="bp3-form-group"
              data-id="instanceAttributes[0].name-1"
            >
              <label
                class="bp3-label"
                for="instanceAttributes"
              >
                <div
                  class="formLabel"
                >
                  
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="instanceAttributesVariables"
                >
                  <div
                    class="tableRow headerRow variablesTableRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      pipeline.customDeployment.fieldNameLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      pipeline.customDeployment.jsonPathRelativeLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      description common.optionalLabel
                    </p>
                  </div>
                  <div
                    class="tableRow variablesTableRow"
                  >
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="instanceAttributes[0].name-2"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="instanceAttributes[0].name"
                            placeholder="pipeline.customDeployment.fieldNamePlaceholder"
                            type="text"
                            value="hostname"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="instanceAttributes[0].jsonPath-3"
                    >
                      
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        >
                          <div
                            class="bp3-input-group MultiTypeInput--input"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="instanceAttributes[0].jsonPath"
                              placeholder="common.valuePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="instanceAttributes[0].description-4"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="instanceAttributes[0].description"
                            placeholder="common.descriptionPlaceholder"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="actionButtons"
                    />
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    data-testid="add-instanceAttriburteVar"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      pipeline.customDeployment.newAttribute
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test DeploymentInfraWrapperWithRef initial render with data - file store script 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main infraWidgetWrapper"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="infraVariablesTitleDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              common.variables
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <span
                class="StyledProps--font StyledProps--main labelText ng-tooltip-native StyledProps--inline"
                data-tooltip-id="infraVariablesDT"
              >
                pipeline.customDeployment.infraVariablesTitle
              </span>
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="customVariablesStage infraVariableSection"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addVariable Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      variables.newVariable
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="fetchInstancesScriptTitleDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.fetchInstancesScript
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--margin-top-medium StyledProps--margin-bottom-medium"
              >
                <div
                  class="group"
                  data-rbd-droppable-context-id="0"
                  data-rbd-droppable-id="droppableSelect"
                >
                  <div
                    class="bp3-form-group"
                    data-id="fetchInstancesScript.store.spec.files-0"
                    style="flex-grow: 1; margin-bottom: 0px;"
                  >
                    <label
                      class="bp3-label"
                      for="fetchInstancesScript.store.spec.files"
                    >
                      <div
                        class="formLabel"
                      >
                        <div
                          class="Layout--vertical StyledProps--main"
                        >
                          <label
                            class="Label--main configLabel ng-tooltip-native"
                            data-tooltip-id="fetchInstanceScriptDT"
                          >
                            pipeline.customDeployment.fetchInstanceScriptHeader
                          </label>
                        </div>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="listFieldsWrapper"
                      >
                        <div
                          aria-describedby="rbd-hidden-text-0-hidden-text-0"
                          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-center StyledProps--margin-top-small"
                          data-rbd-drag-handle-context-id="0"
                          data-rbd-drag-handle-draggable-id="0"
                          data-rbd-draggable-context-id="0"
                          data-rbd-draggable-id="0"
                          draggable="false"
                          role="button"
                          tabindex="0"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                            style="align-items: center;"
                          >
                            <span
                              class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main"
                              icon="drag-handle-vertical"
                            >
                              <svg
                                data-icon="drag-handle-vertical"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  drag-handle-vertical
                                </desc>
                                <path
                                  d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <p
                              class="StyledProps--font StyledProps--main text"
                            >
                              1.
                            </p>
                            <div
                              class="multiSelectField"
                            >
                              <div
                                class="group"
                              >
                                <div
                                  class="bp3-form-group"
                                  data-id="null-1"
                                  style="flex-grow: 1; margin-bottom: 0px; margin-top: 0px;"
                                >
                                  <label
                                    class="bp3-label"
                                  >
                                    <div
                                      class="StyledProps--font StyledProps--main StyledProps--flex"
                                    >
                                      
                                    </div>
                                     
                                    <span
                                      class="bp3-text-muted"
                                    />
                                  </label>
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <div
                                      class="StyledProps--font StyledProps--main selectFieldContainer StyledProps--flex"
                                    >
                                      <div
                                        class="fieldWrapper"
                                      >
                                        <div
                                          class="bp3-form-group"
                                          data-id="undefined-2"
                                          style="width: 100%;"
                                        >
                                          <div
                                            class="bp3-form-content"
                                          >
                                            <div
                                              class="Layout--vertical StyledProps--main"
                                            >
                                              <div
                                                class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                                              >
                                                <div
                                                  class="StyledProps--font StyledProps--main pathWrapper StyledProps--flex"
                                                >
                                                  <p
                                                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey900 StyledProps--padding-left-xsmall"
                                                    style="--text-line-clamp: 1;"
                                                  >
                                                    /script
                                                  </p>
                                                </div>
                                                <div
                                                  class="StyledProps--font StyledProps--main StyledProps--padding-right-small"
                                                >
                                                  <span
                                                    class="Tag--main"
                                                  >
                                                    <span
                                                      class="bp3-tag"
                                                    >
                                                      <span
                                                        class="bp3-text-overflow-ellipsis bp3-fill"
                                                      >
                                                        ORG
                                                      </span>
                                                    </span>
                                                  </span>
                                                  <span
                                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--color StyledProps--color-grey300 StyledProps--margin-left-small"
                                                    icon="chevron-down"
                                                  >
                                                    <svg
                                                      data-icon="chevron-down"
                                                      height="15"
                                                      viewBox="0 0 16 16"
                                                      width="15"
                                                    >
                                                      <desc>
                                                        chevron-down
                                                      </desc>
                                                      <path
                                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                                        fill-rule="evenodd"
                                                      />
                                                    </svg>
                                                  </span>
                                                </div>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <button
                                  class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                                  data-testid="remove-fetchInstancesScript.store.spec.files-[0]"
                                  disabled=""
                                  tabindex="-1"
                                  type="button"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="main-trash"
                                  >
                                    <svg
                                      height="20"
                                      viewBox="0 0 16 20"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                        fill="currentColor"
                                        fill-rule="evenodd"
                                      />
                                      <path
                                        clip-rule="evenodd"
                                        d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                        fill="currentColor"
                                        fill-rule="evenodd"
                                        opacity="0.3"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-popover-wrapper templateDropdown Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="fetchInstancesScript.store.type"
                      placeholder="- Select -"
                      style="padding-right: 0px;"
                      type="text"
                      value="resourcePage.fileStore"
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="instanceObjectArrayPathDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.instanceObjectArrayPath
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="Layout--vertical StyledProps--main"
              style="width: 50%;"
            >
              <div
                class="bp3-form-group halfWidth"
                data-id="instancesListPath-3"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="instancesListPath"
                        placeholder="cd.specifyTargetHost"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle instanceAttributes StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="instanceAttributesDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.instanceAttributes
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="bp3-form-group"
              data-id="instanceAttributes[0].name-4"
            >
              <label
                class="bp3-label"
                for="instanceAttributes"
              >
                <div
                  class="formLabel"
                >
                  
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="instanceAttributesVariables"
                >
                  <div
                    class="tableRow headerRow variablesTableRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      pipeline.customDeployment.fieldNameLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      pipeline.customDeployment.jsonPathRelativeLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      description common.optionalLabel
                    </p>
                  </div>
                  <div
                    class="tableRow variablesTableRow"
                  >
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="instanceAttributes[0].name-5"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="instanceAttributes[0].name"
                            placeholder="pipeline.customDeployment.fieldNamePlaceholder"
                            type="text"
                            value="hostname"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="instanceAttributes[0].jsonPath-6"
                    >
                      
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        >
                          <div
                            class="bp3-input-group MultiTypeInput--input"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="instanceAttributes[0].jsonPath"
                              placeholder="common.valuePlaceholder"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="instanceAttributes[0].description-7"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="instanceAttributes[0].description"
                            placeholder="common.descriptionPlaceholder"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="actionButtons"
                    />
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    data-testid="add-instanceAttriburteVar"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      pipeline.customDeployment.newAttribute
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test DeploymentInfraWrapperWithRef initial render with data - inline script 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main infraWidgetWrapper"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="infraVariablesTitleDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              common.variables
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <span
                class="StyledProps--font StyledProps--main labelText ng-tooltip-native StyledProps--inline"
                data-tooltip-id="infraVariablesDT"
              >
                pipeline.customDeployment.infraVariablesTitle
              </span>
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="customVariablesStage infraVariableSection"
                >
                  <div
                    class="tableRow headerRow variablesTableRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      name
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      typeLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      description
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      valueLabel
                    </p>
                  </div>
                  <div
                    class="tableRow variablesTableRow"
                  >
                    <div
                      class="textInputWithCopyBtn disabled"
                    >
                      <div
                        class="bp3-form-group bp3-disabled input"
                        data-id="variables[0].name-0"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group bp3-disabled"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              disabled=""
                              name="variables[0].name"
                              type="text"
                              value="clusterUrl"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-popover-wrapper popoverWrapper"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <button
                            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="copy-alt"
                            >
                              <svg
                                fill="none"
                                height="12"
                                viewBox="0 0 8 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                    <span
                      class="valueString"
                      data-testid="variables[0].type"
                    >
                      string
                    </span>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      URL to connect to cluster
                    </p>
                    <div
                      class="valueColumn"
                      data-type="FIXED"
                    >
                      <div
                        class="bp3-form-group variableInput"
                        data-id="variables[0].value-1"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="variables[0].value"
                                type="text"
                                value="clusterURL"
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="actionButtons"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                              data-testid="edit-variable-0"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="Edit"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                              data-testid="delete-variable-0"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="main-trash"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 20"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addVariable Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      variables.newVariable
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="fetchInstancesScriptTitleDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.fetchInstancesScript
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--margin-top-medium StyledProps--margin-bottom-medium"
              >
                <div
                  class="halfWidth"
                >
                  <div
                    class="bp3-form-group"
                    data-id="fetchInstancesScript.store.spec.content-2"
                  >
                    <label
                      class="bp3-label"
                      for="fetchInstancesScript.store.spec.content"
                    >
                      <div
                        class="formLabel"
                      >
                        <div
                          class="Layout--vertical StyledProps--main"
                        >
                          <label
                            class="Label--main configLabel ng-tooltip-native"
                            data-tooltip-id="fetchInstanceScriptDT"
                          >
                            pipeline.customDeployment.fetchInstanceScriptHeader
                          </label>
                        </div>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="monacoWrapper"
                      >
                        <textarea
                          name="fetchInstancesScript.store.spec.content"
                        >
                          echo test
                        </textarea>
                        <button
                          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main expandBtn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                            icon="fullscreen"
                          >
                            <svg
                              data-icon="fullscreen"
                              height="10"
                              viewBox="0 0 16 16"
                              width="10"
                            >
                              <desc>
                                fullscreen
                              </desc>
                              <path
                                d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-popover-wrapper templateDropdown Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="fetchInstancesScript.store.type"
                      placeholder="- Select -"
                      style="padding-right: 0px;"
                      type="text"
                      value="inline"
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="instanceObjectArrayPathDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.instanceObjectArrayPath
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="Layout--vertical StyledProps--main"
              style="width: 50%;"
            >
              <div
                class="bp3-form-group halfWidth"
                data-id="instancesListPath-3"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="instancesListPath"
                        placeholder="cd.specifyTargetHost"
                        type="text"
                        value="instances"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle instanceAttributes StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="instanceAttributesDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.instanceAttributes
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="bp3-form-group"
              data-id="instanceAttributes[0].name-4"
            >
              <label
                class="bp3-label"
                for="instanceAttributes"
              >
                <div
                  class="formLabel"
                >
                  
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="instanceAttributesVariables"
                >
                  <div
                    class="tableRow headerRow variablesTableRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      pipeline.customDeployment.fieldNameLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      pipeline.customDeployment.jsonPathRelativeLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      description common.optionalLabel
                    </p>
                  </div>
                  <div
                    class="tableRow variablesTableRow"
                  >
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="instanceAttributes[0].name-5"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="instanceAttributes[0].name"
                            placeholder="pipeline.customDeployment.fieldNamePlaceholder"
                            type="text"
                            value="hostName"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="instanceAttributes[0].jsonPath-6"
                    >
                      
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        >
                          <div
                            class="bp3-input-group MultiTypeInput--input"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="instanceAttributes[0].jsonPath"
                              placeholder="common.valuePlaceholder"
                              type="text"
                              value="ip"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="instanceAttributes[0].description-7"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="instanceAttributes[0].description"
                            placeholder="common.descriptionPlaceholder"
                            type="text"
                            value="IP address of the host"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="actionButtons"
                    />
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    data-testid="add-instanceAttriburteVar"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      pipeline.customDeployment.newAttribute
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test DeploymentInfraWrapperWithRef should match inputs and labels for DeploymentInfraWrapperWithRef with initial values 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main infraWidgetWrapper"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="infraVariablesTitleDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              common.variables
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <span
                class="StyledProps--font StyledProps--main labelText ng-tooltip-native StyledProps--inline"
                data-tooltip-id="infraVariablesDT"
              >
                pipeline.customDeployment.infraVariablesTitle
              </span>
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="customVariablesStage infraVariableSection"
                >
                  <div
                    class="tableRow headerRow variablesTableRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      name
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      typeLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      description
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      valueLabel
                    </p>
                  </div>
                  <div
                    class="tableRow variablesTableRow"
                  >
                    <div
                      class="textInputWithCopyBtn disabled"
                    >
                      <div
                        class="bp3-form-group bp3-disabled input"
                        data-id="variables[0].name-0"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group bp3-disabled"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              disabled=""
                              name="variables[0].name"
                              type="text"
                              value="clusterUrl"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-popover-wrapper popoverWrapper"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <button
                            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="copy-alt"
                            >
                              <svg
                                fill="none"
                                height="12"
                                viewBox="0 0 8 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                    <span
                      class="valueString"
                      data-testid="variables[0].type"
                    >
                      string
                    </span>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      URL to connect to cluster
                    </p>
                    <div
                      class="valueColumn"
                      data-type="FIXED"
                    >
                      <div
                        class="bp3-form-group variableInput"
                        data-id="variables[0].value-1"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="variables[0].value"
                                type="text"
                                value="clusterURL"
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="actionButtons"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                              data-testid="edit-variable-0"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="Edit"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                              data-testid="delete-variable-0"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="main-trash"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 20"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addVariable Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      variables.newVariable
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="fetchInstancesScriptTitleDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.fetchInstancesScript
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--margin-top-medium StyledProps--margin-bottom-medium"
              >
                <div
                  class="halfWidth"
                >
                  <div
                    class="bp3-form-group"
                    data-id="fetchInstancesScript.store.spec.content-2"
                  >
                    <label
                      class="bp3-label"
                      for="fetchInstancesScript.store.spec.content"
                    >
                      <div
                        class="formLabel"
                      >
                        <div
                          class="Layout--vertical StyledProps--main"
                        >
                          <label
                            class="Label--main configLabel ng-tooltip-native"
                            data-tooltip-id="fetchInstanceScriptDT"
                          >
                            pipeline.customDeployment.fetchInstanceScriptHeader
                          </label>
                        </div>
                      </div>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="monacoWrapper"
                      >
                        <textarea
                          name="fetchInstancesScript.store.spec.content"
                        >
                          echo test
                        </textarea>
                        <button
                          class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main expandBtn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                            icon="fullscreen"
                          >
                            <svg
                              data-icon="fullscreen"
                              height="10"
                              viewBox="0 0 16 16"
                              width="10"
                            >
                              <desc>
                                fullscreen
                              </desc>
                              <path
                                d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-popover-wrapper templateDropdown Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="fetchInstancesScript.store.type"
                      placeholder="- Select -"
                      style="padding-right: 0px;"
                      type="text"
                      value="inline"
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle infraSections StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="instanceObjectArrayPathDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.instanceObjectArrayPath
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="Layout--vertical StyledProps--main"
              style="width: 50%;"
            >
              <div
                class="bp3-form-group halfWidth"
                data-id="instancesListPath-3"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="instancesListPath"
                        placeholder="cd.specifyTargetHost"
                        type="text"
                        value="instances"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main tooltipStyle instanceAttributes StyledProps--margin-medium"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="instanceAttributesDT"
          >
            <p
              class="StyledProps--font StyledProps--main header headerText StyledProps--color StyledProps--color-black"
            >
              pipeline.customDeployment.instanceAttributes
            </p>
          </div>
          <div
            class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
          >
            <div
              class="bp3-form-group"
              data-id="instanceAttributes[0].name-4"
            >
              <label
                class="bp3-label"
                for="instanceAttributes"
              >
                <div
                  class="formLabel"
                >
                  
                </div>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="instanceAttributesVariables"
                >
                  <div
                    class="tableRow headerRow variablesTableRow"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      pipeline.customDeployment.fieldNameLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      pipeline.customDeployment.jsonPathRelativeLabel
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                    >
                      description common.optionalLabel
                    </p>
                  </div>
                  <div
                    class="tableRow variablesTableRow"
                  >
                    <div
                      class="bp3-form-group bp3-disabled"
                      data-id="instanceAttributes[0].name-5"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="instanceAttributes[0].name"
                            placeholder="pipeline.customDeployment.fieldNamePlaceholder"
                            type="text"
                            value="hostName"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="instanceAttributes[0].jsonPath-6"
                    >
                      
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        >
                          <div
                            class="bp3-input-group MultiTypeInput--input"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="instanceAttributes[0].jsonPath"
                              placeholder="common.valuePlaceholder"
                              type="text"
                              value="ip"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="instanceAttributes[0].description-7"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="instanceAttributes[0].description"
                            placeholder="common.descriptionPlaceholder"
                            type="text"
                            value="IP address of the host"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="actionButtons"
                    />
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    data-testid="add-instanceAttriburteVar"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      pipeline.customDeployment.newAttribute
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
